k8s-local/networking/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: external
spec:
  controllerName: traefik.io/gateway-controller
