k8s-local/networking/redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http
  namespace: gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      sectionName: http
  hostnames:
    - localhost
    - "*.localhost"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
